version/0.4.0b1/_sources/api/ansys/sam/sysml2/builder/classes/sysml_util/SysMLUtil.rst.txt






:class:`SysMLUtil`
==================


.. py:class:: ansys.sam.sysml2.builder.classes.sysml_util.SysMLUtil

   
   Provides utility methods for SysML element name resolution and class lookup.
















   ..
       !! processed by numpydoc !!





.. py:currentmodule:: SysMLUtil

Overview
--------

.. tab-set::






   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~check_sysml_inherited_name`
            - Resolve the element name, with a ``ClassName::id`` (or dot-safe) fallback.
          * - :py:attr:`~get_sysml_constructor`
            - Get the class constructor from type.
          * - :py:attr:`~get_scripting_constructor`
            - Get a class composing the dynamic mixin in front of the generated class.





Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.builder.classes.sysml_util import SysMLUtil



Method detail
-------------

.. py:method:: check_sysml_inherited_name(element: ansys.sam.sysml2.meta_model.element.Element, dot_safe: bool = False) -> str
   :staticmethod:


   
   Resolve the element name, with a ``ClassName::id`` (or dot-safe) fallback.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_sysml_constructor(element_type: str) -> type[ansys.sam.sysml2.meta_model.e_object.EObject]
   :staticmethod:


   
   Get the class constructor from type.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_scripting_constructor(element_type: str) -> type[ansys.sam.sysml2.meta_model.e_object.EObject]
   :staticmethod:


   
   Get a class composing the dynamic mixin in front of the generated class.
















   ..
       !! processed by numpydoc !!




